<resources>
    <string name="app_name">NEWS 24x7</string>

    <string name="font_roboto_black">Roboto-Black.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="font_roboto_thin">Roboto-Thin.ttf</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_medium">Roboto-Medium.ttf</string>

    <string name="txt_error">Error</string>
    <string name="txt_ok">OK</string>
    <string name="txt_type_something_here">Search</string>
    <string name="txt_text_empty">Enter something to search!</string>
    <string name="txt_no_internet_connection">Please try again! No internet connection.</string>
    <string name="txt_search_message">See what’s happening right now</string>
    <string name="txt_search_failed">Oops, No results found! Try some other keywords!</string>
    <string name="txt_view_full_coverage">View Full Coverage</string>
    <string name="txt_article_by">Article By: %1$s</string>
    <string name="txt_published_on">Published on: %1$s</string>
    <string name="txt_select_country">Select Country</string>
    <string name="txt_select_category">Select Category</string>

    <string-array name="country">
        <item>India</item>
        <item>United States of America</item>
        <item>United Kingdom of Great Britain and Northern Ireland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Australia</item>
        <item>Russia</item>
    </string-array>

    <string-array name="category">
        <item>General</item>
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>
</resources>
