<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.topheadline.TopHeadlineActivity">

    <data>
        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="com.shrikantbadwaik.newsheadlines.view.topheadline.TopHeadlineViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <android.support.v7.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/drawable_round_corner01"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:focusableInTouchMode="true"
                app:iconifiedByDefault="false"
                app:searchIcon="@null"
                app:queryHint="@string/txt_type_something_here"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
                android:id="@+id/pb_search"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="@{viewModel.searchLoading ? View.VISIBLE : View.GONE}"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintTop_toTopOf="@+id/search_view"
                app:layout_constraintEnd_toEndOf="@+id/search_view"
                app:layout_constraintStart_toStartOf="@+id/search_view"
                app:layout_constraintBottom_toBottomOf="@+id/search_view"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/image_view01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_news"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                android:id="@+id/text_view01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_search_message"
                android:textAlignment="center"
                android:padding="5dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                app:customFontName="@string/font_roboto_black"
                app:layout_constraintTop_toBottomOf="@+id/image_view01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:newsArticles="@{viewModel.newsArticleObservable}"
                app:layout_constraintTop_toBottomOf="@+id/search_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
                android:id="@+id/pb_loading"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>