<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.shrikantbadwaik.newsheadlines.view.topheadline.TopHeadlineRecyclerAdapter.ContentViewHolderVM"/>
    </data>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardElevation="2dp"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@android:color/white">

            <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_article_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_news"
                    android:scaleType="fitCenter"
                    android:imageUrl="@{viewModel.articleImage}"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                    android:id="@+id/tv_article_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="3dp"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textColor="@android:color/black"
                    android:text="@{viewModel.articleTitle}"
                    app:customFontName="@string/font_roboto_medium"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_article_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Article title"/>

            <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                    android:id="@+id/tv_article_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:textSize="15sp"
                    android:text="@{viewModel.articleAuthor}"
                    android:textColor="@android:color/holo_green_light"
                    app:customFontName="@string/font_roboto_regular"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_article_image"
                    app:layout_constraintEnd_toStartOf="@+id/tv_article_date"
                    app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="CNN"/>

            <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                    android:id="@+id/tv_article_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="3dp"
                    android:textSize="13sp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@{viewModel.articleDate}"
                    app:customFontName="@string/font_roboto_light"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_article_author"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
                    app:layout_constraintStart_toEndOf="@+id/tv_article_author"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="Published on:"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>