<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.articledetails.ArticleDetailsActivity">

    <data>
        <variable
                name="viewModel"
                type="com.shrikantbadwaik.newsheadlines.view.articledetails.ArticleDetailsViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorGreen01"
                app:title="News Feed"
                app:titleTextColor="@android:color/white"
                app:titleTextAppearance="@style/AppTheme.Toolbar"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_open_browser"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_article_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_news"
                        android:imageUrl="@{viewModel.articleImage}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.0"/>

                <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                        android:id="@+id/tv_article_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textSize="20sp"
                        android:textColor="@android:color/black"
                        android:text="@{viewModel.articleTitle}"
                        app:customFontName="@string/font_roboto_medium"
                        app:layout_constraintTop_toBottomOf="@+id/iv_article_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:text="Deadpool"/>

                <LinearLayout
                        android:id="@+id/linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tv_article_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                    <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                            android:id="@+id/tv_article_author"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:textSize="15sp"
                            android:textAlignment="viewStart"
                            android:textColor="@android:color/black"
                            android:text="@{viewModel.articleAuthor}"
                            android:layout_weight="0.5"
                            app:customFontName="@string/font_roboto_regular"
                            tools:text="Article By: Wade Wilson"/>

                    <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                            android:id="@+id/tv_article_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:textSize="12sp"
                            android:textAlignment="viewEnd"
                            android:text="@{viewModel.articleDate}"
                            android:layout_weight="0.5"
                            app:customFontName="@string/font_roboto_light"
                            tools:text="Posted on: 26 Apr. 2019"/>
                </LinearLayout>

                <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontTextView
                        android:id="@+id/tv_article_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:text="@{viewModel.articleDescription}"
                        app:customFontName="@string/font_roboto_regular"
                        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Deadpool vs DeathStroke"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>

        <com.shrikantbadwaik.newsheadlines.domain.widget.CustomFontButton
                android:id="@+id/btn_open_browser"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:background="@color/colorGreen01"
                android:text="@string/txt_view_full_coverage"
                android:onClick="@{() -> viewModel.onOpenBrowserClicked()}"
                app:customFontName="@string/font_roboto_medium"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>